--- a/.env
+++ b/.env
@@ -10,12 +10,12 @@ DEV_SERVER_LOOPBACK=http://host.docker.internal:8085
 # DEV_SERVER_LOOPBACK=http://0.0.0.0:3000
 
 # from: https://craftcms.com/docs/4.x/config/db-settings.html#attributes
-CRAFT_APP_ID=
+CRAFT_APP_ID=CraftCMS--7aaf5f06-64b0-4a48-952e-dc961d2fe653
 CRAFT_ENVIRONMENT=dev
-CRAFT_SECURITY_KEY=
+CRAFT_SECURITY_KEY=oQ2Z2KFP2z8SPCxYkB4bcw9mzbpyo8Cv
 CRAFT_DB_DRIVER=pgsql
 CRAFT_DB_SERVER=postgres
-CRAFT_DB_PORT=3306
+CRAFT_DB_PORT=5432
 CRAFT_DB_DATABASE=dev_craftcms
 CRAFT_DB_USER=craftcms
 CRAFT_DB_PASSWORD=SecretPassword
