--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 			// Update VARIANT to pick a PHP version: 8, 8.1, 8.0, 7, 7.4
 			// Append -bullseye or -buster to pin to an OS version.
 			// Use -bullseye variants on local on arm64/Apple Silicon.
-			"VARIANT": "8",
+			"VARIANT": "8-bullseye",
 			"NODE_VERSION": "none"
 		}
 	},
@@ -30,6 +30,13 @@
 			]
 		}
 	},
+
+	"runArgs": [
+		"--network=host",
+		"--add-host=postgres:127.0.0.1"
+	],
+
+	"hos"
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [],
