fix: installer script and env

--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ CRAFT_DB_USER=craftcms
 CRAFT_DB_PASSWORD=SecretPassword
 CRAFT_DB_SCHEMA=public
 CRAFT_DB_TABLE_PREFIX=
+
+PRIMARY_SITE_URL=http://localhost:8080/
